# ws-protocol

cpp/examples/: CMakeLists.txt
cpp/examples/src/: example_server.cpp
cpp/foxglove-websocket/: CMakeLists.txt
cpp/foxglove-websocket/include/foxglove/websocket/: common.hpp  optional.hpp  parameter.hpp  server_interface.hpp  websocket_client.hpp  websocket_server.hpp
cpp/foxglove-websocket/src/: parameter.cpp
